...
                              indicatorColor: Color(0x004B39EF),
                              tabs: [
                                Tab(
                                  text: 'Signup',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_adnq'),
                                  text: 'Login',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                      Column(
                                        mainAxisSize: MainAxisSize.max,
                                        mainAxisAlignment:
                                            MainAxisAlignment.center,
                                        children: [
                                          TextFormField(
                                            key: ValueKey('Signup-Email_6xw3'),
                                            controller: _model
                                                .signupEmailTextController,
                                            focusNode:
                                                _model.signupEmailFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                                  );
                                                }),
                                            ],
                                          ),
                                          TextFormField(
                                            key: ValueKey(
                                                'Signup-Password_cq3s'),
                                            controller: _model
                                                .signupPasswordTextController,
                                            focusNode:
                                                _model.signupPasswordFocusNode,
                                            autofocus: false,
                                            enabled: true,
...
                                                  );
                                                }),
                                            ],
                                          ),
                                          TextFormField(
                                            key: ValueKey(
                                                'Signup-ConfirmPassword_hdw9'),
                                            controller: _model
                                                .signupConfirmPasswordTextController,
                                            focusNode: _model
                                                .signupConfirmPasswordFocusNode,
                                            autofocus: false,
                                            enabled: true,
...
                                                }),
                                            ],
                                          ),
                                          if (_model.tabBarCurrentIndex == 0)
                                            FFButtonWidget(
                                              key: ValueKey(
                                                  'Signup-Button_gj0s'),
                                              onPressed: () async {
                                                logFirebaseEvent(
                                                    'HOME_PAGE_PAGE_Signup-Button_ON_TAP');
                                                logFirebaseEvent(
                                                    'Signup-Button_validate_form');
                                                if (_model.formKey
...
                                ),
                                SingleChildScrollView(
                                  child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      TextFormField(
                                        key: ValueKey('Login-Email_v68f'),
                                        controller:
                                            _model.loginEmailTextController,
                                        focusNode: _model.loginEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.loginEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                                            .none),
                                              );
                                            }),
                                        ],
                                      ),
                                      TextFormField(
                                        key: ValueKey('Login-Password_n5z7'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
