...
                          child: Container(
                            decoration: BoxDecoration(
                              color: Color(0x7E445552),
                              borderRadius: BorderRadius.circular(20.0),
                            ),
                            child: FlutterFlowIconButton(
                              key: ValueKey('IconButton_pqe9'),
                              borderRadius: 22.0,
                              hoverIconColor: Color(0xFF552E2E),
                              icon: Icon(
                                Icons.favorite,
                                color: _model.iconClicked == 1
                                    ? Color(0xFFFF7CE8)
...
