...
                                    'FEED_PAGE_PAGE_Container_d9vt6n6a_ON_TAP');
                                logFirebaseEvent('Container_update_page_state');
                                _model.selectedTab = '\"following\"';
                                safeSetState(() {});
                              },
                              child: Container(
                                key: ValueKey('Container_0tzw'),
                                height: 38.0,
                                decoration: BoxDecoration(
                                  color: _model.selectedTab == '\"following\"'
                                      ? FlutterFlowTheme.of(context).secondary
                                      : FlutterFlowTheme.of(context).tertiary,
                                  boxShadow: [
...
